--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main class="container-fluid min-vh-100 d-flex align-items-center justify-content-center">
             <div class="container" style="max-width: 600px">
                 <div class="text-center mb-5">
-                    <div class="d-flex align-items-center gap-3">
+                    <div class="d-flex align-items-center gap-3 justify-content-center">
                         <img class="logo" src="./wind.png" alt="Logo" />
                         <h1 class="fw-bold">Four-Seven-Eight</h1>
                     </div>
