--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                 </div>
 
                 <div class="card shadow-sm rounded-4 p-4 mb-4">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="fs-1 fw-bold text-primary">4</div>
-                        <div class="flex-grow-1">
+                    <div class="row align-items-center">
+                        <div class="col-2">
+                            <div class="fs-1 fw-bold text-primary text-center">4</div>
+                        </div>
+                        <div class="col-10">
                             <div
                                 class="progress"
                                 role="progressbar"
@@ -38,10 +40,12 @@
                     </div>
                 </div>
 
-                <div class="card shadow-sm rounded-4 p-3 mb-4">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="fs-1 fw-bold text-warning">7</div>
-                        <div class="flex-grow-1">
+                <div class="card shadow-sm rounded-4 p-4 mb-4">
+                    <div class="row align-items-center">
+                        <div class="col-2">
+                            <div class="fs-1 fw-bold text-warning text-center">7</div>
+                        </div>
+                        <div class="col-10">
                             <div
                                 class="progress"
                                 role="progressbar"
@@ -56,10 +60,12 @@
                     </div>
                 </div>
 
-                <div class="card shadow-sm rounded-4 p-3 mb-4">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="fs-1 fw-bold text-success">8</div>
-                        <div class="flex-grow-1">
+                <div class="card shadow-sm rounded-4 p-4 mb-4">
+                    <div class="row align-items-center">
+                        <div class="col-2">
+                            <div class="fs-1 fw-bold text-success text-center">8</div>
+                        </div>
+                        <div class="col-10">
                             <div
                                 class="progress"
                                 role="progressbar"
